# tauri-sveltekit-template

./: README.md  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
.github/workflows/: build_android.yml  publish.yml  test_build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/: App.svelte
src/routes/: +page.svelte
